Update Bayes chapter

--- a/references.bib
+++ b/references.bib
@@ -1517,3 +1517,32 @@ doi = {10.1201/9781420072884-c30}
   year={2018},
   publisher={OTexts}
 }
+
+@article{berger2006case,
+  title={The case for objective Bayesian analysis},
+  author={Berger, James},
+  year={2006}
+}
+
+@article{martin2023computing,
+  title={Computing Bayes: From then ‘til now},
+  author={Martin, Gael M and Frazier, David T and Robert, Christian P},
+  journal={Statistical Science},
+  volume={1},
+  number={1},
+  pages={1--17},
+  year={2023},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{pfeffermann2013new,
+  title={{New Important Developments in Small Area Estimation}},
+  author={Pfeffermann, Danny and others},
+  journal={Statistical Science},
+  volume={28},
+  number={1},
+  pages={40--68},
+  year={2013},
+  publisher={Institute of Mathematical Statistics}
+}
+
