--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -35,79 +35,92 @@ knitr::opts_chunk$set(
 
 Bayesian statistics is a mathematical paradigm for learning from data.
 It is especially well suited to facing the challenges posed by Section \@ref(surveillance).
-First, because it allows for principled and flexible integration of data with scientific knowledge.
-Second, because it handling of uncertainty is an integral part of the Bayesian paradigm.
+First, because it allows for principled and flexible integration of data with domain knowledge.
+Second, because uncertainty is handled as an integral part of the Bayesian paradigm.
 In this section I provide a brief overview.
 For a more complete introduction, I recommend @gelman2013bayesian or @mcelreath2020statistical.
 
 ### Bayesian modelling
 
 At its best, the Bayesian paradigm allows the analyst focus on how best to model the data.
-This is achieved mathematically by the construction of a generative model $p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$ for the observed data $\mathbf{y} = (y_1, \ldots, y_n)$ together with parameters $\boldsymbol{\mathbf{\phi}} = (\phi_1, \ldots, \phi_d)$, where $n$ is the dimension of the data and $d$ is the number of parameters, and the notation $p(\cdot)$ denotes a probability distribution.
-Choice of the particular parameters $\boldsymbol{\mathbf{\phi}}$ will depend upon the requirements of the analysis.
+This is achieved mathematically by the construction of a generative model $p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$ for the observed data $\mathbf{y}$ together with parameters $\boldsymbol{\mathbf{\phi}}$, where the notation $p(\cdot)$ denotes a probability distribution.
+I assume the data to be an $n$-vector $(y_1, \ldots, y_n)$, and the parameters to be a $n$-vector $(\phi_1, \ldots, \phi_d)$.
+Choice of the parameters used to model the data will depend upon the requirements of the analysis.
 
-The model is generative in the sense that one can simulate from it to generate samples $(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \sim p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$.
+The model is generative in the sense that it can be simulated from to obtain samples $(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \sim p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$.
 If these samples differ too greatly from what the analyst would expect, then the generative model does not capture their prior scientific understanding of the data, and can be refined.
-Using this procedure, known as a prior predictive check [@gelman2013bayesian; Chapter 6], models can be built iteratively, with complexity added gradually.
+In this way, prior predictive checks [@gelman2013bayesian; Chapter 6] can be used to build generative models iteratively, with complexity added gradually.
 
 The model is usually constructed from two parts, known respectively as the likelihood $p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}})$ and the prior distribution $p(\boldsymbol{\mathbf{\phi}})$.
-The joint distribution is obtained by the product $p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) = p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})$.
+The joint distribution is obtained by the product
+\begin{equation}
+p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) = p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}}).
+\end{equation}
 The likelihood, as a function of $\boldsymbol{\mathbf{\phi}}$ with $\mathbf{y}$ fixed, reflects the probability of observing the data when the true value of the parameters is $\boldsymbol{\mathbf{\phi}}$.
 The prior distribution encapsulates beliefs about the parameters $\boldsymbol{\mathbf{\phi}}$ before the data is observed.
 
 Recommendations for specifying the prior distribution vary.
-The extent to which subjective information should be incorporated into the prior distribution, and thereby influence the posterior distribution, is a central topic of discussion.
-Proponents of the objective Bayesian paradigm suggest that the prior distribution should be non-informative, so as not to introduce subjectivity into the analysis.
-That said, we shall see that the distinction between likelihood and prior distribution can be unclear (Section \@ref(hierarchical-lgm-elgm)).
+The extent to which subjective information should be incorporated into the prior distribution, and in doing so influence the posterior distribution, is a central topic of discussion.
+Proponents of the objective Bayesian paradigm [@berger2006case] put forward that the prior distribution should be non-informative, so as not to introduce subjectivity into the analysis.
+That said, we shall see in Section \@ref(hierarchical-lgm-elgm) that the distinction between likelihood and prior distribution can be unclear.
 As such, it may be argued that issues of subjectivity are not unique to the prior distribution, and ultimately the challenge of specifying the data generating process is better thought of more holistically [@gelman2017prior].
 
 ### Bayesian computation
 
-(ref:conjugate) An example of Bayesian modelling and computation for a simple one parameter model. Here the likelihood is $y_i \sim \text{Poisson}(\phi)$ for $i = 1, 2, 3$ and prior distribution on the rate parameter is $\phi \sim \text{Gamma}(3, 1)$. I simulated observed data $\mathbf{y} = (1, 2, 3)$ from the distribution $\text{Poisson}(2.5)$. As such, the true data generating process is within the space of generative models being considered. This is sometimes known as the $\mathcal{M}$-closed world, in contrast to the $\mathcal{M}$-open world where the model is said to be misspecified [@bernardo2001bayesian]. Furthermore, the posterior distribution is available in closed form as $\text{Gamma}(9, 4)$. This is because the posterior distribution is in the same family of probability distributions as the prior distribution, and the model is described as being conjugate. Conjugate models are often used because of their convenience. Though other models may be more suitable, they will typically be more computationally demanding. In this situation, which is typical, the posterior distribution is more tightly peaked than the prior distribution.
+(ref:conjugate) An example of Bayesian modelling and computation for a simple one parameter model. Here the likelihood is $y_i \sim \text{Poisson}(\phi)$ for $i = 1, 2, 3$ and prior distribution on the rate parameter is $\phi \sim \text{Gamma}(3, 1)$. I simulated observed data $\mathbf{y} = (1, 2, 3)$ from the distribution $\text{Poisson}(2.5)$. As such, the true data generating process is within the space of generative models being considered (This situation is sometimes known [@bernardo2001bayesian] as the $\mathcal{M}$-closed world, in contrast to the $\mathcal{M}$-open world where the model is said to be misspecified .) Furthermore, the posterior distribution is available in closed form as $\text{Gamma}(9, 4)$. This is because the posterior distribution is in the same family of probability distributions as the prior distribution, and the model is described as being conjugate. Conjugate models are often used because of their convenience. Though other models may be more suitable, they will typically be more computationally demanding. In this situation, which is typical, the posterior distribution is more tightly peaked than the prior distribution.
 
 ```{r conjugate, fig.cap="(ref:conjugate)"}
 knitr::include_graphics("figures/bayesian/conjugate.png")
 ```
 
 The posterior distribution $p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y})$ encapsulates probabilistic beliefs about the parameters given the observed data.
-Using the eponymous Bayes' theorem, it is given by
+Using the eponymous Bayes' theorem
 \begin{equation}
 p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) = \frac{p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})}{p(\mathbf{y})}. (\#eq:posterior)
 \end{equation}
 
-Unfortunately, most of the time it is intractable to calculate the posterior distribution directly.
+The primary goal in a Bayesian analysis is to obtain the posterior distribution.
+Unfortunately, most of the time it is intractable to calculate directly.
 This is because of the potentially high-dimensional integral
 \begin{equation}
 p(\mathbf{y}) = \int p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \text{d}\boldsymbol{\mathbf{\phi}}
 \end{equation}
 in the denominator of Equation \@ref(eq:posterior).
 As such, although it is easy to evaluate $p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})$, it is typically difficult to evaluate the posterior distribution itself.
-
-The difficulty of performing Bayesian inference in general may be thought of as analogous to the difficulties with calculating integrals.
+The difficulty in performing Bayesian inference in general may be thought of as analogous to the difficulty in calculating integrals.
 As with integration, in some cases closed form solutions are available.
 Figure \@ref(fig:conjugate) illustrates one such case, where the prior distribution and posterior distribution are in the same family of probability distributions.
 
-A variety of computational methods have been developed to tackle this problem.
-They may broadly be divided into sampling algorithms, and deterministic approximations.
+A great variety of computational methods have been developed to tackle this problem [@martin2023computing].
+They may broadly be divided into Monte Carlo algorithms, and deterministic approximations.
 
-#### Sampling algorithms
+#### Monte Carlo algorithms
 
-Also known as Monte Carlo methods, sampling algorithms [@robert2005monte] look to generate samples from the posterior distribution 
+Monte Carlo algorithms [@robert2005monte] look to generate samples from the posterior distribution 
 \begin{equation}
 \boldsymbol{\mathbf{\phi}}_i \sim p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}), \quad i \in 1, \ldots M.
 \end{equation}
-These samples may then be used in any future computations involving the posterior distribution.
+These samples may be used in any future computations involving the posterior distribution.
 For example, if $G = G(\boldsymbol{\mathbf{\phi}})$ then the expectation of $G$ with respect to the posterior distribution can be approximated by
 \begin{equation}
-\mathbb{E}(G) = \int G(\boldsymbol{\mathbf{\phi}}) \text{d} \boldsymbol{\mathbf{\phi}} \approx \sum_{i = 1}^M G(\boldsymbol{\mathbf{\phi}}_i).
+\mathbb{E}(G \, | \, \mathbf{y}) = \int G(\boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \text{d} \boldsymbol{\mathbf{\phi}} \approx \sum_{i = 1}^M G(\boldsymbol{\mathbf{\phi}}_i).
 \end{equation}
+Most quantities of interest can be cast as posterior expectations.
 
-Markov chain Monte Carlo (MCMC) methods [@roberts2004general] are perhaps the most popular class of sampling algorithms, and proceed by simulating from an ergodic Markov chain with the posterior distribution as its stationary distribution .
+Markov chain Monte Carlo (MCMC) methods [@roberts2004general] are the most popular class of sampling algorithms.
+Using MCMC samples are generated from by simulating from an ergodic Markov chain with the posterior distribution as its stationary distribution.
+The Metropolis-Hastings [@metropolis1953equation; @hastings1970monte] algorithm uses a proposal distribution $q(\boldsymbol{\mathbf{\phi}}_{i + 1} \, | \, \boldsymbol{\mathbf{\phi}}_i)$ to generate candidate parameters for the next step in the Markov chain.
+
 In this thesis, I use the the No-U-Turn sampler [NUTS; @hoffman2014no], a Hamiltonian Monte Carlo [HMC; @duane1987hybrid; @neal2011mcmc] algorithm, implemented in the Stan [@carpenter2017stan] probabilistic programming language (PPL).
-HMC uses derivatives of the posterior distribution to generate efficient Metropolis-Hastings [@metropolis1953equation; @hastings1970monte] proposal distributions.
-
+HMC uses derivatives of the posterior distribution to generate efficient Metropolis-Hastings proposal distributions.
 NUTS automatically adapts the tuning parameters of HMC based local properties of the posterior distribution.
 Though not a one-size-fits-all solution, NUTS has proven empirically to be a good choice for sampling from a range of posterior distributions.
+
+(ref:stan) NUTS can be used to sample from the posterior distribution in the example of Figure \@ref(fig:conjugate). Panel A shows a histogram of the NUTS samples as compared to the true posterior. Panel B shows a traceplot. Panel C shows the convergence of the empirical posterior mean to the true value.
+
+```{r stan, fig.cap="(ref:stan)"}
+knitr::include_graphics("figures/bayesian/stan.png")
+```
 
 #### Deterministic approximations
 
@@ -123,6 +136,7 @@ Laplace approximation.
 Quadrature.
 Integrated nested Laplace approximation.
 These approximations are the subject of Chapter \@ref(naomi-aghq).
+Unsure how much detail to go into here.
 
 ### Interplay between modelling and computation
 
@@ -179,9 +193,9 @@ Storage, manipulation, and inference for spatio-temporal data can be challenging
 
 ### Small-area estimation
 
-Because of the large number of possible locations in space and time, often no or limited direct data is available for any given location.
-In this circumstance, direct estimates of indicators of interest are either impossible or have large error due to high variance.
-Small-area estimation (SAE) methods aim to overcome the limitations of small data by sharing information across space and time (Figure \@ref(fig:zmb-maps), Figure \@ref(fig:zmb-scatter)).
+Because of the large number of possible locations in space and time, and cost of collecting data, often no or limited direct observations are available for any given location.
+In this situtation, direct estimates of indicators of interest are either impossible or inaccurate.
+Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information across space and time (Figure \@ref(fig:zmb-maps), Figure \@ref(fig:zmb-scatter)).
 
 (ref:zmb-maps) I simulated simple random samples with varying sample size (5, 25, 125) in each of the 156 constituencies of Zambia. I then calculated direct and modelled estimates for each survey. The model was a logistic regression with linear predictor given by an intercept and a Besag spatial random effect. HIV estimates for Zambia have previously been generated at the district-level comprising 116 spatial units. Moving forward, there is interest in generating estimates at the constituency level, as program planning is more locally devolved. This figure is adapted from a presentation I gave for the Zambia HIV Estimates Technical Working Group, available from [`athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids).
 
