Update before meeting Jeff

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -25,7 +25,7 @@ In this chapter, I present an investigation of spatial random effects specificat
 My investigation was motivated by a fundamental question encountered during model construction.
 Namely, should the model be augmented to capture a conjectured feature of the data?
 The results are presented in @howes2023beyond.
-Code for the analysis in this chapter is available from [`athowes/beyond-borders`](https://github.com/athowes/beyond-borders).
+Code for the analysis in this chapter is available from [`https://github.com/athowes/beyond-borders`](https://github.com/athowes/beyond-borders).
 
 ## Background
 
