--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -41,7 +41,7 @@ I developed the statistical model, building upon an earlier version of the analy
 The results are presented in @howes2023spatio.
 Kathryn has also created a spreadsheet tool using the estimates available from `https://hivtools.unaids.org/pse/`.
 This tool is now being used by countries, and continues to be developed.
-Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw).
+Code for the analysis in this chapter is available from [`https://github.com/athowes/multi-agyw`](https://github.com/athowes/multi-agyw).
 
 ## Background
 
