--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -28,7 +28,7 @@ Ensuring fast and accurate Bayesian inferences in this setting is challenging.
 I began working on this project at the start of my PhD, and only started to make progress after reading @stringer2021fast.
 I am grateful to have later collaborated with Alex Stringer.
 The results of this work are presented in @howes2023fast.
-Code for the analysis in this chapter is available from [`athowes/naomi-aghq`](https://github.com/athowes/elgm-inf).
+Code for the analysis in this chapter is available from [`https://github.com/athowes/naomi-aghq`](https://github.com/athowes/elgm-inf).
 
 ## Inference methods
 
