--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -47,5 +47,6 @@
 \item[WAIC] Watanabe-Akaike Information Criterion.
 \item[ESS] Effective Sample Size.
 \item[IID] Independent and Identically Distributed.
+\item[PPL] Probabilistic Programming Language.
 
 \end{mclistof} 
