--- a/references.bib
+++ b/references.bib
@@ -1546,3 +1546,26 @@ doi = {10.1201/9781420072884-c30}
   publisher={Institute of Mathematical Statistics}
 }
 
+@article{knorr2000bayesian,
+  title={Bayesian modelling of inseparable space-time variation in disease risk},
+  author={Knorr-Held, Leonhard},
+  journal={Statistics in medicine},
+  volume={19},
+  number={17-18},
+  pages={2555--2567},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+@article{porcu202130,
+  title={30 Years of space--time covariance functions},
+  author={Porcu, Emilio and Furrer, Reinhard and Nychka, Douglas},
+  journal={Wiley Interdisciplinary Reviews: Computational Statistics},
+  volume={13},
+  number={2},
+  pages={e1512},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+
