--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -111,10 +111,10 @@ Markov chain Monte Carlo (MCMC) methods [@roberts2004general] are the most popul
 Using MCMC samples are generated from by simulating from an ergodic Markov chain with the posterior distribution as its stationary distribution.
 The Metropolis-Hastings [@metropolis1953equation; @hastings1970monte] algorithm uses a proposal distribution $q(\boldsymbol{\mathbf{\phi}}_{i + 1} \, | \, \boldsymbol{\mathbf{\phi}}_i)$ to generate candidate parameters for the next step in the Markov chain.
 
-In this thesis, I use the the No-U-Turn sampler [NUTS; @hoffman2014no], a Hamiltonian Monte Carlo [HMC; @duane1987hybrid; @neal2011mcmc] algorithm, implemented in the Stan [@carpenter2017stan] probabilistic programming language (PPL).
-HMC uses derivatives of the posterior distribution to generate efficient Metropolis-Hastings proposal distributions.
+In this thesis, I use the No-U-Turn sampler [NUTS; @hoffman2014no], a Hamiltonian Monte Carlo [HMC; @duane1987hybrid; @neal2011mcmc] algorithm, as implemented in the Stan [@carpenter2017stan] probabilistic programming language (PPL).
+HMC uses derivatives of the posterior distribution to generate efficient Metropolis-Hastings proposal distributions based on Hamiltonian dynamics.
 NUTS automatically adapts the tuning parameters of HMC based local properties of the posterior distribution.
-Though not a one-size-fits-all solution, NUTS has proven empirically to be a good choice for sampling from a range of posterior distributions.
+Though not a one-size-fits-all solution, NUTS has been shown empirically to be a good choice for sampling from a range of posterior distributions.
 
 (ref:stan) NUTS can be used to sample from the posterior distribution in the example of Figure \@ref(fig:conjugate). Panel A shows a histogram of the NUTS samples as compared to the true posterior. Panel B shows a traceplot. Panel C shows the convergence of the empirical posterior mean to the true value.
 
@@ -135,8 +135,7 @@ Need to talk about:
 Laplace approximation.
 Quadrature.
 Integrated nested Laplace approximation.
-These approximations are the subject of Chapter \@ref(naomi-aghq).
-Unsure how much detail to go into here.
+Unsure how much detail to go into here given that these approximations are the subject of Chapter \@ref(naomi-aghq).
 
 ### Interplay between modelling and computation
 
@@ -149,7 +148,7 @@ As computation improves, the space of models available to the analyst expands.
 
 ## Spatio-temporal statistics
 
-(ref:st) The position of the capital of South Africa, Cape Town, can be considered a point location. The ZF Mgcawu District Municipality is an example of an area. World AIDS Day, designated on the 1st of December every year, can be considered a point in time. The second fiscal quarter, running through April, May and June, and denoted by Q2 represents a period of time. Both Cape Town and World AIDS Day in reality are areas of lesser extent, rather than true point locations. There are few instances of true infinitesimal point locations in everyday life.
+(ref:st) The spatial location of Cape Town, the capital of South Africa, could be considered a point. The ZF Mgcawu District Municipality is an example of an area. World AIDS Day, designated on the 1st of December every year, could be considered a point in time. The second fiscal quarter, running through April, May and June, and denoted by Q2 represents a period of time. In reality, both Cape Town and World AIDS Day are areas, rather than true point locations. Instances of infinitesimal point locations in everyday life are rare.
 
 ```{r st, fig.cap="(ref:st)"}
 knitr::include_graphics("figures/bayesian/st.png")
@@ -165,22 +164,27 @@ Similarly, observations may be associated to a point $t \in \mathcal{T}$ or peri
 
 Spatio-temporal data has some important properties:
 
-1. **Correlation structure**:
+1. **Covariance structure**:
 Tobler's first law of geography is that "everything is related to everything else, but near things are more related than distant things" [@tobler1970computer].
-In "The Design of Experiments" @fisher1936design similarly observed that neighbouring crops were more likely to have similar yields.
-This law may be formalised using spatial covariance functions.
-When these functions vary over space they are called non-stationary.
+In "The Design of Experiments" @fisher1936design observed likewise that neighbouring crops were more likely to have similar yields.
+This law can be formalised using spatial covariance functions.
+Spatial covariance functions are called isotropic when they apply equally in all directions, and stationary when they are invariant over space.
 
-    As well as space, Tobler's first law extends to time.
+    As well as space, an Tobler's first law extends to time.
     Observations made close together in time tend to be similar.
-    The field of time series analysis [@hyndman2018forecasting].
+    There is a field of time series analysis [@hyndman2018forecasting] to summarise in a couple of sentences.
 
-    Because of its correlation structure, spatio-temporal data are not independent and identically distributed (IID).
-    Only one observation of a spatio-temporal process is typically realised.
+    Space-time correlation structure [@porcu202130].
+    Separable means no space-time correlation can be factorised, nonseparable means it can't.
+    Separable correlation could be @knorr2000bayesian I, II, III and IV.
+
+    Because of their correlation structure, spatio-temporal data are not independent and identically distributed (IID).
+    Only one observation of a spatio-temporal process is realised.
+    Does this matter in any meaningful way?
 
 2. **Scales**:
-Spatio-temporal observations might be at various possible scales.
-May want to model data at a scale it was not observated at.
+Spatio-temporal observations could be at various possible scales.
+May want to model data at a scale it was not observed at.
 May want to model data from different scales simultaneously.
 Downscaling.
 Upscaling.
@@ -188,22 +192,29 @@ Change-of-support.
 Misalignment.
 3. **Size**:
 Data with both spatial and temporal dimensions are often large.
-Models typically require many parameters.
+Models typically require many parameters due to the non-IID nature of spatio-temporal data.
 Storage, manipulation, and inference for spatio-temporal data can be challenging.
 
 ### Small-area estimation
 
-Because of the large number of possible locations in space and time, and cost of collecting data, often no or limited direct observations are available for any given location.
-In this situtation, direct estimates of indicators of interest are either impossible or inaccurate.
-Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information across space and time (Figure \@ref(fig:zmb-maps), Figure \@ref(fig:zmb-scatter)).
+There are a large number of possible locations in space and time.
+The cost of collecting data can be prohibitive.
+Especially the case for data related to people for which collection in more difficult to automate.
+As a result, often no or limited direct observations are available for any given space-time location.
+Direct estimates of indicators of interest are either impossible or inaccurate in this setting.
+Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information.
+In the spatio-temporal setting sharing of information occurs across space and time.
 
-(ref:zmb-maps) I simulated simple random samples with varying sample size (5, 25, 125) in each of the 156 constituencies of Zambia. I then calculated direct and modelled estimates for each survey. The model was a logistic regression with linear predictor given by an intercept and a Besag spatial random effect. HIV estimates for Zambia have previously been generated at the district-level comprising 116 spatial units. Moving forward, there is interest in generating estimates at the constituency level, as program planning is more locally devolved. This figure is adapted from a presentation I gave for the Zambia HIV Estimates Technical Working Group, available from [`athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids).
+More generally, SAE methods are useful when data is limited for subpopulations of interest.
+Subpopulations could be generated by the intersection of demographic variables such as age and gender, as well as spatio-temporal location.
+
+(ref:zmb-maps) Simulation of a simple random sample $y_i \sim \text{Bin}(m, p_i)$ with varying sample size ($m = 5, 25, 125$) in each of the $i = 1, \ldots, 156$ constituencies of Zambia. Direct estimates were obtained by the ratio $y_i / m$. Modelled estimates were obtained using a logistic regression with linear predictor given by an intercept and a spatial random effect. HIV estimates for Zambia have previously been generated at the district-level, comprising 116 spatial units. Moving forward, there is interest in generating estimates at the constituency level, as program planning is devolved locally. This figure is adapted from a presentation I gave for the Zambia HIV Estimates Technical Working Group, available from [`https://github.com/athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids).
 
 ```{r zmb-maps, fig.cap="(ref:zmb-maps)"}
 knitr::include_graphics("figures/bayesian/zmb-maps.png")
 ```
 
-(ref:zmb-scatter) The estimates from surveys with higher sample size have higher Pearson correlation coefficient $R$ with the underlying truth. For a fixed sample size, correlation can be improved by using modelled estimates to borrow information across spatial units, rather than using the higher variance direct estimates. Points along the dashed diagonal line correspond to agreement between the estimate obtained from the survey and the underlying truth used to generate the data. The setting matches that of Figure \@ref(fig:zmb-maps).
+(ref:zmb-scatter) The setting of this figure matches that of Figure \@ref(fig:zmb-maps). Estimates from surveys with higher sample size have higher Pearson correlation coefficient $R$ with the underlying truth. For a fixed sample size, correlation can be improved by using modelled estimates to borrow information across spatial units, rather than using the higher variance direct estimates. Points along the dashed diagonal line correspond to agreement between the estimate obtained from the survey and the underlying truth used to generate the data.
 
 ```{r zmb-scatter, fig.cap="(ref:zmb-scatter)"}
 knitr::include_graphics("figures/bayesian/zmb-scatter.png")
@@ -376,7 +387,7 @@ The second-stage sampling probability each household within the $i$th cluster in
 \begin{equation}
 \pi_{1hj} = \frac{n_{hj}}{N_{hj}},
 \end{equation}
-where $n_{hj}$ is the numer of households selected in cluster $j$ and stratum $h$.
+where $n_{hj}$ is the number of households selected in cluster $j$ and stratum $h$.
 That is, each household in the cluster has equal selection probability.
 The overall selection probability of each household in cluster $j$ of stratum $h$ is $\pi_{hi} = \pi_{1hj} \times \pi_{2hj}$.
 
